tests/snapshots/conformance__n_number_++.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[++1234]
stdout --- 
<empty>
stderr --- 
error: unexpected character `+`. expected start of a json value
 --> stdin:1:2
  |
1 | [++1234]
  |  ^
