tests/snapshots/conformance__n_number_+1.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[+1]
stdout --- 
<empty>
stderr --- 
error: unexpected character `+`. expected start of a json value
 --> stdin:1:2
  |
1 | [+1]
  |  ^
