tests/snapshots/conformance__n_number_-01.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[-01]
stdout --- 
<empty>
stderr --- 
error: unexpected leading zero
 --> stdin:1:2
  |
1 | [-01]
  |  ^-
  |   |
  |   first zero found here
  |
help: remove the leading zeros
  |
1 - [-01]
1 + [-1]
  |
