tests/snapshots/conformance__n_number_-1.0..json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-1.0.]
stdout --- 
<empty>
stderr --- 
error: unexpected character `.`. expected start of a json value
 --> stdin:1:6
  |
1 | [-1.0.]
  |      ^
