tests/snapshots/conformance__n_number_0.3e.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[0.3e]
stdout --- 
<empty>
stderr --- 
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:6
  |
1 | [0.3e]
  |  ----^
  |  |  |
  |  |  exponent indicator found here
  |  number with exponent found here
